<resources>
    <string name="app_name">CONQUERORS</string>
    <string name="splash_screen_description">ONLY STRONG SURVIVE</string>

    <!-- Activity titles -->
    <string name="title_activity_home">Main panel</string>
    <string name="title_activity_registration">Sign up</string>
    <string name="title_activity_login">Sign in</string>
    <string name="tittle_activity_my_profile">My profile</string>
    <string name="title_activity_settings">Settings</string>
    <string name="tittle_activity_change_email">Change email</string>
    <string name="tittle_activity_change_password">Change password</string>
    <string name="tittle_activity_friends">Friends</string>
    <string name="tittle_activity_find_friend">Find friend</string>
    <string name="tittle_activity_character_statistics">Character statistics</string>
    <string name="tittle_activity_my_characters">My characters</string>

    <!-- Login and Registration -->
    <!-- General -->
    <string name="prompt_username">Username</string>
    <string name="prompt_nick">Nick</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_email_or_nick">Email or nick</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_confirm">Confirm password</string>
    <string name="prompt_city">City</string>
    <string name="prompt_born">Born</string>
    <string name="prompt_about_me">About me</string>

    <string name="action_register">Register</string>
    <string name="action_login">Login</string>
    <string name="action_forgot_password">Forgot password?</string>
    <string name="action_not_logged_in">No account yet? <b><u>Create one</u></b></string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="info_login_success">Welcome %1$s!</string>
    <string name="info_registration_success">%1$s successfully registered</string>
    <string name="register_rules">I declare that I have read and accept the Conquerors app rules</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="date_long_format">EEEE, MMMM d</string>

    <!-- Get everyday prize -->
    <string name="action_everyday_prize">Press the image of the gift to get an award</string>
    <string name="present_image">Image of a present</string>
    <string name="info_got_gift">You have been gifted %1$d skill points</string>

    <!-- Errors -->
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_email_match">Email and confirmation does not match</string>
    <string name="error_invalid_password_match">Password and confirmation does not match</string>
    <string name="error_invalid_password">Password and confirmation does not match or are invalid</string>
    <string name="error_invalid_address">Could not find given address.</string>
    <string name="error_incorrect_password">Invalid password</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_field_length">%1$s should contain minimum of %2$d and maximum of %3$d characters</string>
    <string name="error_date_in_past">Cannot setup date in past</string>
    <string name="dialog_logout_title">Logout</string>
    <string name="dialog_logout_message">Are you sure you want to logout?</string>
    <string name="error_find_friend_no_results">Unable to find user with given name</string>
    <string name="dialog_button_no">No</string>
    <string name="dialog_button_yes">Yes</string>

    <!-- Menu Items -->
    <string name="menu_item_events">Games</string>
    <string name="menu_item_my_events">My games</string>
    <string name="menu_item_add_event">Add game</string>
    <string name="menu_item_add_friend">Add friend</string>
    <string name="menu_item_characters">My characters</string>
    <string name="menu_item_add_character">Add character</string>
    <string name="menu_item_profile">Profile</string>
    <string name="menu_item_friends">Friends</string>
    <string name="menu_item_settings">Settings</string>
    <string name="menu_item_login">Login</string>
    <string name="menu_item_logout">Logout</string>

    <!-- Create Character -->
    <string name="title_activity_create_character">Create character</string>
    <string name="info_character_created">Character created!</string>

    <string name="radio_bard">Bard</string>
    <string name="radio_warrior">Warrior</string>
    <string name="radio_thief">Thief</string>
    <string name="radio_wizard">Wizard</string>
    <string name="character_class">Character class</string>
    <string name="action_next">Next</string>
    <string name="action_back">Back</string>
    <string name="action_approve">Approve your character</string>
    <string name="character_sex">Choose sex</string>
    <string name="radio_man">Man</string>
    <string name="radio_woman">Woman</string>
    <string name="character_appearance">Appearance</string>
    <string name="character_hair">Hair</string>
    <string name="character_image_description">Character appearance</string>
    <string name="character_hat">Hat</string>
    <string name="arrow_right">Next</string>
    <string name="arrow_left">Previous</string>
    <string name="character_eye_color">Eye color</string>
    <string name="character_blouse">Blouse</string>
    <string name="character_pants">Pants</string>
    <string name="character_boots">Boots</string>
    <string name="character_name">Nickname</string>
    <string name="character_nickname">Enter your characters nickname</string>
    <string name="character_player_nickname">Default nickname</string>
    <string name="character_player_class">Default class</string>
    <string name="character_class_statistics">Character class statistics</string>
    <string name="character_strength">Strength</string>
    <string name="character_charisma">Charisma</string>
    <string name="character_agility">Agility</string>
    <string name="character_intelligence">Intelligence</string>
    <string name="character_player_strength">Default strength number</string>
    <string name="character_player_charisma">Default charisma number</string>
    <string name="character_player_agility">Default agility number</string>
    <string name="character_player_intelligence">Default intelligence number</string>

    <!-- Character Statistic -->
    <string name="character_current_strength">Current character strength</string>
    <string name="character_current_charisma">Current character charisma</string>
    <string name="character_current_agility">Current character agility</string>
    <string name="character_current_intelligence">Current character intelligence</string>
    <string name="character_level">Character level</string>
    <string name="user_skillpoints">User skill points</string>
    <string name="character_current_level">Current character level</string>
    <string name="user_current_skillpoints">Current skill points</string>
    <string name="character_skills">Skills</string>
    <string name="go_to_character_statistics">SHOW STATISTICS</string>

    <!-- My Profile -->
    <string name="my_profile_my_characters">My characters</string>
    <string name="my_profile_my_games">My games</string>
    <string name="my_profile_my_awards">My awards</string>
    <string name="my_profile_my_friends">My friends</string>
    <string name="profile_edit">Edit profile</string>

    <!-- Settings -->
    <string name="settings_action_remove_account">Remove account</string>
    <string name="settings_action_change_password">Change password</string>
    <string name="settings_action_change_email">Change email</string>
    <string name="settings_remove_dialog_message">Are you sure you want to delete your account?</string>

    <!-- Change email -->
    <string name="prompt_new_email">New email</string>
    <string name="prompt_new_email_confirm">Confirm new email</string>
    <string name="action_change_email">Change email</string>
    <string name="change_email_success">Email has been changed.</string>

    <!-- Change password -->
    <string name="prompt_old_password">Old password</string>
    <string name="prompt_new_password">New password</string>
    <string name="prompt_new_password_confirm">Confirm new password</string>
    <string name="change_password_success">Password has been changed.</string>

    <!-- Game -->
    <string name="choose_character">Choose character</string>
    <string name="choose_opponent">Choose opponent</string>
    <string name="game_created">Game created</string>
    <string name="game_id">Game Id</string>
    <string name="opponent">Opponent</string>
    <string name="date">Date</string>
    <string name="character">Character</string>
    <string name="create_event_cancel_title">Game creation</string>
    <string name="create_event_cancel_message">Are you sure, you want to cancel?</string>
    <string name="create_game_no_opponent_choose_error">Choose opponent!</string>
    <string name="no_character_message">You do not have any character yet</string>
    <string name="no_character_action_button">Create one!</string>

    <!-- Friends -->
    <string name="friend_level">Level</string>
    <string name="friend_points">Points</string>
    <string name="go_to_profile_button">GO TO PROFILE</string>
    <string name="number_of_games">Games:</string>
    <string name="friend_label_add_friend">Add friend</string>
    <string name="friend_label_delete_friend">Delete friend</string>
    <string name="friend_label_accept_friend">Accept friend</string>
    <string name="friend_label_reject_friend">Reject friend</string>
    <string name="friend_label_uninvite_friend">Cancel invitation</string>
    <string name="friend_characters">Number of characters</string>
    <string name="friend_games">Number of games</string>

    <!-- Friends actions -->
    <string name="add_friend_title">Adding friend</string>
    <string name="add_friend_message">Are you sure you want to add this friend?</string>
    <string name="added_friend_message">Friend invitation was sent</string>
    <string name="delete_friend_title">Deleting friend</string>
    <string name="delete_friend_message">Are you sure you want to delete this friend?</string>
    <string name="deleted_friend_message">Friend was deleted</string>
    <string name="accept_friend_title">Accept invitation</string>
    <string name="accept_friend_message">Are you sure you want to accept invitation?</string>
    <string name="accepted_friend_message">Invitation was accepted</string>
    <string name="ignore_title">Rejecting</string>
    <string name="ignore_message">Are you sure you want to reject this invitation?</string>
    <string name="ignored_message">Invitation was rejected</string>
    <string name="uninvit_title">Uninviting</string>
    <string name="uninvit_message">Are you sure you want to cancel this invitation?</string>
    <string name="uninvited_message">Invitation was canceled</string>
    <string name="no_friends_message">You do not have any friends yet</string>
    <string name="no_friends_action_button">Add one!</string>

    <!-- Invitations -->
    <string name="invitations_header">Invitations</string>

    <!-- Home -->
    <string name="home_hello_user">Hello </string>
    <string name="home_get_daily_prize_button">Get daily prize!</string>
    <string name="home_your_games">Your games</string>
    <string name="home_no_games_message">You do not have any games yet</string>
    <string name="home_no_games_action_button">Create one!</string>
    <string name="home_play_game_button">Play</string>
    <string name="home_it_is_opponent_turn_button">Opponent turn</string>



</resources>
