<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.createCharacter.Fragments.SummaryFragment">


    <android.support.constraint.ConstraintLayout
        android:id="@+id/summaryLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/displayCharacterNicknameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/character_player_nickname"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/characterView" />

        <TextView
            android:id="@+id/displayCharacterClassText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/character_player_class"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/displayCharacterNicknameText" />

        <TextView
            android:id="@+id/displayCharacterStatistics"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/character_class_statistics"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/displayCharacterClassText" />

        <ScrollView
            android:id="@+id/summaryScrollView"
            android:layout_width="370dp"
            android:layout_height="169dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/displayCharacterStatistics">

            <TableLayout
                android:id="@+id/summaryTableLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="clip_horizontal|center">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="fill_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/characterStrengthText"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:text="@string/character_strength" />

                    <TextView
                        android:id="@+id/displayClassStrength"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/character_player_strength" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="clip_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/characterCharismaText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/character_charisma" />

                    <TextView
                        android:id="@+id/displayCharacterCharisma"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/character_player_charisma" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="clip_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/characterAgilityText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/character_agility" />

                    <TextView
                        android:id="@+id/displayCharacterAgility"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/character_player_agility" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="clip_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/characterIntelligenceText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/character_intelligence" />

                    <TextView
                        android:id="@+id/displayCharacterIntelligence"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/character_player_intelligence" />
                </TableRow>

            </TableLayout>
        </ScrollView>

    </android.support.constraint.ConstraintLayout>
</FrameLayout>