<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_no_borders">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background"
        android:padding="60dp"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_gravity="center"
                android:src="@drawable/login_logo" />
        </FrameLayout>


        <include layout="@layout/divider" />

        <TextView
            android:id="@+id/settings_change_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/settings_action_change_email"
            android:textSize="20sp"
            android:textStyle="bold" />

        <include layout="@layout/divider" />

        <TextView
            android:id="@+id/settings_change_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/settings_action_change_password"
            android:textSize="20sp"
            android:textStyle="bold" />

        <include layout="@layout/divider" />

        <TextView
            android:id="@+id/settings_remove_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/settings_action_remove_account"
            android:textSize="20sp"
            android:textStyle="bold" />

        <include layout="@layout/divider" />
    </LinearLayout>
</ScrollView>